--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: green;
+  background-color: #199af1;
   display: flex;
   flex-direction: column;
   align-items: center;
